frontend/shared/components/src/editor/email.mixin.scss
 // Define colors, but still allow overrides for dark modes
 $color-gray-4-original: #5e5e5e;
 $color-gray-4: var(--color-gray-4, $color-gray-4-original);

 $color-gray-2-original: #dcdcdc;
 $color-gray-2: var(--color-gray-2, $color-gray-2-original);

 $color-border-original: $color-gray-2; 
 $color-border: var(--color-border, $color-border-original);

 $color-gray-text: $color-gray-4;

 $color-error: #f0153d;
 $color-primary: #0053ff;
 $color-discount: #ff4747;

@mixin email-content($element: "body") {
    #{$element} {
        color: #000716;
        color: var(--color-dark, #000716);
        font-family: -apple-system-body, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
        font-size: 12pt;
        line-height: 1.4;
    }

    /// New
    p {
        margin: 0;
        padding: 0;
        line-height: 1.4;
    }

    p.description {
        color: $color-gray-4;

        a {
            &, &:link, &:visited, &:active, &:hover {
                text-decoration: underline;
                color: $color-gray-4;
            }
        }
    }

    strong {
        font-weight: bold;
    }

    em {
        font-style: italic;
    }

    h1 {
        font-size: 30px;
        font-weight: bold;
        line-height: 1.2;

        @media (max-width: 350px) {
            font-size: 24px;
        }
        margin: 0;
        padding: 0;
    }

    h2 {
        font-size: 20px;
        line-height: 1.2;
        font-weight: bold;
        margin: 0;
        padding: 0;
    }

    h3 {
        font-size: 16px;
        line-height: 1.2;
        font-weight: bold;
        margin: 0;
        padding: 0;
    }

    h4 {
        line-height: 1.2;
        font-weight: 500;
        margin: 0;
        padding: 0;
    }

    ol, ul {
        list-style-position: outside;
        padding-left: 30px;

    }

    hr {
        height: 1px;
        background: $color-border;
        border-radius: 1px;
        padding: 0;
        margin: 20px 0;
        outline: none;
        border: 0;
    }

    .button {
        touch-action: inherit;
        user-select: auto;
        cursor: pointer;

        // The display flex style, doesn't render the carret correctly on an empty node
        display: inline-block !important;
        line-height: 42px;
        font-size: 16px; 
        font-weight: bold;

        &:active {
            transform: none;
        }
    }

    img {
        max-width: 100%;
        height: auto;
    }

    a {
        &, &:link, &:visited, &:active, &:hover {
            text-decoration: underline;
            color: blue;
        }
    }

    .email-data-table {
        width: 100%;
        border-collapse: collapse;

        th, td {
            text-align: left;
            padding: 10px 10px 10px 0;
            border-bottom: 1px solid $color-border;
            vertical-align: middle;

            &:last-child {
                text-align: right;
                padding-right: 0;
            }
        }

        thead {
            font-weight: bold;

            th {
                font-size: 10pt;
            }
        }

        h4 ~ p {
            padding-top: 3px;
            opacity: 0.8;
            font-size: 11pt;
        }

        
    }

    .email-style-inline-code {
        font-family: monospace;
        white-space: pre-wrap;
        display: inline-block;
    }

    .email-style-description-small {
        font-size: 14px;
        line-height: 1.5;
        font-weight: normal;
        color: $color-gray-text;
        font-variation-settings: 'opsz' 19;
    }

    .email-style-title-list {
        font-size: 16px;
        line-height: 1.3;
        font-weight: 500;

        + p {
        padding-top: 3px; 
        }
    }

    .email-style-title-prefix-list {
        font-size: 11px;
        line-height: 1.5;
        font-weight: bold;
        color: $color-primary;
        text-transform: uppercase;
        margin-bottom: 3px;

        &.error {
            color: $color-error;
        }
    }


    .email-style-price-base {
        font-size: 15px;
        line-height: 1.4;
        font-weight: 500;
        font-variant-numeric: tabular-nums;

        &.disabled {
            opacity: 0.6;
        }

        &.negative {
            color: $color-error;
        }
    }

    .email-style-price {
        @extend .email-style-price-base;
        font-weight: bold;
        color: $color-primary;
    }

    .email-style-discount-old-price {
        @extend .email-style-price-base;
        text-decoration: line-through;
        color: $color-gray-4;
    }

    .email-style-discount-price {
        @extend .email-style-price-base;
        font-weight: bold;
        color: $color-discount;
        margin-left: 5px;
    }

    .pre-wrap {
        white-space: pre-wrap;
    }

}

